2002-09-09  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.c (main) : add a warning if
	  xkb is not available.

2002-09-09  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c : on 2nd thought lets disable the 'beep on
	  feature change' if the master switch is off.

	http://bugzilla.gnome.org/show_bug.cgi?id=92488
	* gnome-accessibility-keyboard-properties.glade : tweak accelerators

2002-09-09  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=90936
	* gnome-accessibility-keyboard-properties.glade : Add mnemonic_widget
	  assignments and fix a typo.

2002-08-28  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=91854
	* accessibility-keyboard.c : the max slow key delay is 500ms.
	  We clamp that in the settings daemon.  Fix the ui to reflect that.

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>

	* accessibility-keyboard.desktop.in: Fix the desktop file so that
	it validates.

2002-08-05  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.glade : Restore the master
	  toggle.

	* accessibility-keyboard.c (setup_dialog) : support the master toggle.
	(cb_master_enable_toggle) : new.

2002-08-01  jacob berkman  <jacob@ximian.com>

	* accessibility-keyboard.c (setup_accessX_dialog): fix widget name
	for the keyboard capplet button

	* gnome-accessibility-keyboard-properties.c (dialog_response):
	don't quit when the import accessx button is clicked (#89358)

2002-06-21  Satyajit Kanungo  <satyajit.kanungo@wipro.com>

	* gnome-accessibility-keyboard-properties.c :
 	 Changed the help link to point to the correct document (#85895)

2002-06-10  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c : tweak the layout as requested and adjust
	  the max slowkey delay to 500 to avoid losing the keyboard due to some
	  sort of an X problem.

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0