@@ -347,22 +347,10 @@
 			  <property name="visible">True</property>
 
 			  <child>
-			    <widget class="GtkImageMenuItem" id="File Menu">
+			    <widget class="GtkMenuItem" id="File Menu">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">_Menu</property>
+			      <property name="label" translatable="yes">_File</property>
 			      <property name="use_underline">True</property>
-
-			      <child internal-child="image">
-				<widget class="GtkImage" id="image35">
-				  <property name="visible">True</property>
-				  <property name="stock">gtk-help</property>
-				  <property name="icon_size">1</property>
-				  <property name="xalign">0.5</property>
-				  <property name="yalign">0.5</property>
-				  <property name="xpad">0</property>
-				  <property name="ypad">0</property>
-				</widget>
-			      </child>
 
 			      <child>
 				<widget class="GtkMenu" id="File Menu_menu">
@@ -375,7 +363,7 @@
 				      <signal name="activate" handler="on_menu_item_1_activate"/>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image36">
+					<widget class="GtkImage" id="image59">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-new</property>
 					  <property name="icon_size">1</property>
@@ -396,7 +384,7 @@
 				      <signal name="activate" handler="on_menu_item_2_activate"/>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image37">
+					<widget class="GtkImage" id="image60">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-open</property>
 					  <property name="icon_size">1</property>
@@ -416,7 +404,7 @@
 				      <property name="use_underline">True</property>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image38">
+					<widget class="GtkImage" id="image61">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-save</property>
 					  <property name="icon_size">1</property>
@@ -442,7 +430,7 @@
 				      <property name="use_underline">True</property>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image39">
+					<widget class="GtkImage" id="image62">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-print</property>
 					  <property name="icon_size">1</property>
@@ -468,7 +456,7 @@
 				      <property name="use_underline">True</property>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image40">
+					<widget class="GtkImage" id="image63">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-quit</property>
 					  <property name="icon_size">1</property>
@@ -486,23 +474,11 @@
 			  </child>
 
 			  <child>
-			    <widget class="GtkImageMenuItem" id="edit1">
+			    <widget class="GtkMenuItem" id="edit1">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Edit Menu</property>
+			      <property name="label" translatable="yes">_Edit</property>
 			      <property name="use_underline">True</property>
 			      <signal name="activate" handler="on_edit1_activate" last_modification_time="Thu, 18 Jul 2002 03:49:33 GMT"/>
-
-			      <child internal-child="image">
-				<widget class="GtkImage" id="image41">
-				  <property name="visible">True</property>
-				  <property name="stock">gtk-dialog-info</property>
-				  <property name="icon_size">1</property>
-				  <property name="xalign">0.5</property>
-				  <property name="yalign">0.5</property>
-				  <property name="xpad">0</property>
-				  <property name="ypad">0</property>
-				</widget>
-			      </child>
 
 			      <child>
 				<widget class="GtkMenu" id="edit1_menu">
@@ -515,7 +491,7 @@
 				      <signal name="activate" handler="on_cut1_activate" last_modification_time="Thu, 18 Jul 2002 03:49:33 GMT"/>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image42">
+					<widget class="GtkImage" id="image64">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-cut</property>
 					  <property name="icon_size">1</property>
@@ -536,7 +512,7 @@
 				      <signal name="activate" handler="on_copy1_activate" last_modification_time="Thu, 18 Jul 2002 03:49:33 GMT"/>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image43">
+					<widget class="GtkImage" id="image65">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-copy</property>
 					  <property name="icon_size">1</property>
@@ -557,7 +533,7 @@
 				      <signal name="activate" handler="on_paste1_activate" last_modification_time="Thu, 18 Jul 2002 03:49:33 GMT"/>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image44">
+					<widget class="GtkImage" id="image66">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-paste</property>
 					  <property name="icon_size">1</property>
