@@ -108,7 +108,8 @@ gnome_settings_wm_load (GConfClient *client)
     set_number_of_workspaces (n >= 1 ? n : 1);
 
     value = gconf_client_get (client, "/desktop/gnome/applications/window_manager/workspace_names", NULL);
-    if (gconf_value_get_list_type (value) == GCONF_VALUE_STRING) {
+    if (value != NULL &&
+	gconf_value_get_list_type (value) == GCONF_VALUE_STRING) {
 	workspace_list = gconf_value_get_list (value);
 	set_workspace_names (workspace_list);
 	for (li = workspace_list; li != NULL; li = li->next) {
