@@ -1,3 +1,12 @@
+2002-09-11  Jody Goldberg <jody@gnome.org>
+
+	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
+	  set the timeout options fully.
+
+2002-09-10  Jody Goldberg <jody@gnome.org>
+
+	* gnome-settings-wm.c (gnome_settings_wm_load) : protect against NULL.
+
 2002-09-09  Jody Goldberg <jody@gnome.org>
 
 	http://bugzilla.gnome.org/show_bug.cgi?id=91223
